--- a/consul-deployment.yml
+++ b/consul-deployment.yml
@@ -1,11 +1,4 @@
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: consul
-data:
-...
----
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -25,8 +18,8 @@ spec:
         - -server
         - -bootstrap-expect
         - "3"
-        - -advertise
-        - consul
+        - -client
+        - 0.0.0.0
 ...
 ---
 apiVersion: v1
@@ -34,8 +27,22 @@ kind: Service
 metadata:
   name: consul
 spec:
+  selector:
+    app: consul
   ports:
   - name: http
     port: 8500
   - name: dns
     port: 8600
+...
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: consul-cluster
+spec:
+  selector:
+    app: consul
+  ports:
+  - name: lan
+    port: 8301
