--- a/consul-deployment.yml
+++ b/consul-deployment.yml
@@ -17,6 +17,10 @@ spec:
       - name: consul
         image: consul:latest
         env:
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: POD_IP
           valueFrom:
             fieldRef:
@@ -30,6 +34,17 @@ spec:
         - -domain=cluster.local
         - -server
         lifecycle:
+          postStart:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - >
+                consul join \
+                  consul-0.consul.$(NAMESPACE).svc.cluster.local \
+                  consul-1.consul.$(NAMESPACE).svc.cluster.local \
+                  consul-2.consul.$(NAMESPACE).svc.cluster.local \
+                  || true
           preStop:
             exec:
               command:
