--- a/vault-deployment.yml
+++ b/vault-deployment.yml
@@ -9,20 +9,37 @@ spec:
       labels:
         app: vault
     spec:
-      containers:
+      volumes:
+      - name: vault-config
+        configMap:
+          name: vault
+      containers: 
+      - name: consul-agent
+        image: consul:latest
+        env:
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        args:
+        - agent
+        - -data-dir=/consul/data
+        - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
+        - -retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local
+        - -retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local
+        lifecycle:
+          preStop:
+            exec:
+              command:
+              - consul
+              - leave
+
       - name: vault
         image: vault:latest
-        capabilities:
-        - IPC_LOCK
-...
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: vault
-spec:
-  type: LoadBalancer
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8200
+        securityContext:
+          capabilities:
+            add: 
+            - IPC_LOCK
+        volumeMounts:
+        - name: vault-config
+          mountPath: /vault/config
