--- a/vault-config.yml
+++ b/vault-config.yml
@@ -6,3 +6,7 @@ data:
   config.hcl: |
     storage "consul" {
     }
+    listener "tcp" {
+      address = "0.0.0.0:8200"
+      tls_disable = "true"
+    }
