--- a/vault-deployment.yml
+++ b/vault-deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: vault
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -13,6 +13,9 @@ spec:
       - name: vault-config
         configMap:
           name: vault
+      - name: vault-consul-config
+        configMap:
+          name: vault-consul-config
       containers: 
       - name: consul-agent
         image: consul:latest
@@ -23,16 +26,13 @@ spec:
               fieldPath: metadata.namespace
         args:
         - agent
-        - -data-dir=/consul/data
+        - -disable-host-node-id
         - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
         - -retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local
         - -retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local
-        lifecycle:
-          preStop:
-            exec:
-              command:
-              - consul
-              - leave
+        volumeMounts:
+        - name: vault-consul-config
+          mountPath: /consul/config
 
       - name: vault
         image: vault:latest
@@ -40,6 +40,8 @@ spec:
           capabilities:
             add: 
             - IPC_LOCK
+        args:
+        - server
         volumeMounts:
         - name: vault-config
           mountPath: /vault/config
